# pico-infonesPlus

./: .gitmodules  CMakeLists.txt  audio.cpp  audio.h  buildAll.sh  main.cpp  menu.cpp  nvram.cpp  nvram.h  screen_output.h
boards/: earrings_rp2354.h
infones/: InfoNES.cpp
